--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==5.1.4
 django-allauth==65.3.0
 django-widget-tweaks==1.5.0
+idna==3.10
 mysqlclient==2.2.6
 pillow==11.0.0
 python-decouple==3.8
+requests==2.32.3
 setuptools==75.1.0
 sqlparse==0.5.3
 tzdata==2024.2
+urllib3==2.3.0
 wheel==0.44.0
